   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.50
 ============

 Released on 

 New features and improvements:

   - Have a new icon for account selection (todo #1034).
   - ofaReconciliation: asssociates an account to the used BAT files (todo #751).
   - ofaReconciliationRender: change the bottom summary font (todo #1001).
   - ofaReconciliationRender: Add the rendering date to the title (todo #1002).

 Bug fixes:

   - import-bourso-pdf: fix PDF import (todo #1006).
   - ofaDossierTreeview: just ignore rows with empty columns (todo #1035).
   - ofoDossier: fix update of solde account per currency.

 Other changes:

   - Fails when dispose_has_run is True (todo #995).
   - myIDialog: new interface.
   - myDialog, myWindow: removed classes (todo #992).
   - my_iwindow_msg_dialog(): new method (todo #1039).
   - ofaIAccountEntry: new interface.
   - ofaISingleKeeper: new interface (todo #1038).
   - ofaOpeTemplateBookBin: removed class (todo #1037).
   - ofaSettlement: is renamed as ofaSettlementPage (todo #1040).

-----------------------------------------------------------------------
 Version 0.49
 ============

 Released on 2015-03-04

 New features and improvements:

   - ofaAccountFilterVVBin: account selection icon is set inside of the entry.
   - ofaDossierManager: gives a title to the dialog.
   - ofaDossierOpen: gives a title to the dialog.
   - ofaDossierOpen: shows all dossier, even if only archived.
   - ofaEntryPage: display operation template (todo #1008).
   - ofaExerciceCloseAssistant: makes the assistant non-modal, using new myIAssistant interface.
   - ofaExportAssistant: makes the assistant non-modal, using new myIAssistant interface.
   - ofaExportAssistant: keep the format configuration per data type.
   - ofaFileFormat: now haves a string delimiter configuration option (todo #1028).