@@ -13,6 +13,7 @@
       <object class="GtkGrid" id="top">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="margin_left">4</property>
         <property name="margin_bottom">2</property>
         <property name="row_spacing">3</property>
         <property name="column_spacing">4</property>
